Fixed bug with more answers button where if you clicked the button and then switched prodects it would remain as a collapse button instead of switching back to the more answers button.

--- a/client/src/style.sass
+++ b/client/src/style.sass
@@ -914,12 +914,14 @@ img
     outline: none
 
 .answerImage
+  max-width: 55vw
   margin: 5px
   height: 8em
   border: 2px solid black
 
-#answerImageDiv
+.answerImageDiv
   display: flex
+  flex-wrap: wrap
 
 
 #helpfulQ
